tests/baselines/reference/parserVariableDeclaration3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/VariableDeclarations/parserVariableDeclaration3.ts (4 errors) ====
    function runTests() {
        var outfile = new Harness.Compiler.WriterAggregator()
                          ~~~~~~~
!!! error TS2304: Cannot find name 'Harness'.
          , outerr = new Harness.Compiler.WriterAggregator()
                         ~~~~~~~
!!! error TS2304: Cannot find name 'Harness'.
          , compiler = <TypeScript.TypeScriptCompiler>new TypeScript.TypeScriptCompiler(outerr)
                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeScript'.
                                                          ~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeScript'.
          , code;
    }